# cityboulder

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
cityboulder_crawler/: Cargo.toml  Dockerfile  sqlite.db
cityboulder_crawler/src/: main.rs
cityboulder_data/: Cargo.toml
cityboulder_data/migrations/2020-11-09-114414_create_crawler_tables/: down.sql  up.sql
cityboulder_data/src/: lib.rs  models.rs  schema.rs
cityboulder_web/: Cargo.toml
cityboulder_web/src/: main.rs
cityboulder_web/static/: index.html
cityboulder_web/static/js/: main.js
