[package]
name = "cityboulder_crawler"
version = "0.1.0"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19" }
async-std = { version = "1.7.0", features = ["std"]}
surf = "2.1.0"
scraper = "0.12.0"
serde_json = "1.0"
cityboulder_data = { path = "../cityboulder_data"}

[target.x86_64-unknown-linux-musl.dependencies]
libsqlite3-sys = { version = "*", features = ["bundled"] }