[package]
name = "cityboulder_web"
version = "0.1.0"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2.0"
actix-files = "0.4.0"
cityboulder_data = { path = "../cityboulder_data"}
chrono = { version = "0.4.19" }
env_logger = "0.8.1"